# ao-fleet

./: Cargo.toml  README.md
crates/ao-fleet-ao/: Cargo.toml
crates/ao-fleet-ao/src/: ao_command.rs  lib.rs
crates/ao-fleet-ao/src/client/: ao_daemon_client.rs  ao_hostd_client.rs  ao_hostd_ws_client.rs  ao_remote_daemon_client.rs  mod.rs
crates/ao-fleet-ao/src/errors/: ao_command_error.rs  mod.rs
crates/ao-fleet-ao/src/models/: daemon_command_result.rs  daemon_start_options.rs  daemon_state.rs  hostd_host_profile.rs  hostd_log_entry.rs  hostd_log_list_response.rs  hostd_project_summary.rs  hostd_ws_event.rs  hostd_ws_heartbeat.rs  mod.rs  project_status_report.rs
crates/ao-fleet-cli/: Cargo.toml
crates/ao-fleet-cli/src/: main.rs
crates/ao-fleet-cli/src/cli/: command_router.rs  mod.rs  root_command.rs  run.rs
crates/ao-fleet-cli/tests/: founder_bootstrap.rs
crates/ao-fleet-knowledge/: Cargo.toml
crates/ao-fleet-knowledge/src/: lib.rs
crates/ao-fleet-knowledge/src/errors/: knowledge_error.rs  mod.rs
crates/ao-fleet-knowledge/src/models/: knowledge_base_manifest.rs  knowledge_collection.rs  knowledge_ingestion_job.rs  knowledge_ingestion_report.rs  knowledge_query.rs  knowledge_search_result.rs  mod.rs
crates/ao-fleet-knowledge/src/services/: knowledge_base.rs  knowledge_catalog.rs  knowledge_ingestion.rs  knowledge_query_engine.rs  knowledge_search_service.rs  mod.rs
crates/ao-fleet-mcp/: Cargo.toml
crates/ao-fleet-mcp/src/: lib.rs
crates/ao-fleet-mcp/src/adapters/: fleet_mcp_store_api.rs  mod.rs
crates/ao-fleet-mcp/src/api/: fleet_mcp_api.rs  mod.rs
crates/ao-fleet-mcp/src/error/: fleet_mcp_error.rs  mod.rs
crates/ao-fleet-mcp/src/inputs/: daemon_override_clear_input.rs  daemon_override_list_input.rs  daemon_override_upsert_input.rs  daemon_reconcile_input.rs  daemon_status_input.rs  host_get_input.rs  host_list_input.rs  knowledge_document_create_input.rs  knowledge_fact_create_input.rs  knowledge_record_list_input.rs  knowledge_search_input.rs  knowledge_source_upsert_input.rs  mod.rs  project_create_input.rs  project_host_placement_assign_input.rs  project_host_placement_clear_input.rs  project_host_placement_list_input.rs  project_list_input.rs  schedule_create_input.rs  schedule_list_input.rs  schedule_window_input.rs  team_create_input.rs  team_list_input.rs
crates/ao-fleet-mcp/src/results/: daemon_reconcile_decision.rs  daemon_reconcile_result.rs  mod.rs
crates/ao-fleet-mcp/src/server/: fleet_mcp_server.rs  mod.rs
crates/ao-fleet-mcp/src/surface/: fleet_mcp_surface.rs  mcp_tool_descriptor.rs  mcp_tool_input_schema.rs  mcp_tool_property.rs  mcp_tool_value_kind.rs  mod.rs
crates/ao-fleet-scheduler/: Cargo.toml
crates/ao-fleet-scheduler/src/: lib.rs  schedule_evaluator.rs
crates/ao-fleet-store/: Cargo.toml
crates/ao-fleet-store/sql/audit_event/: insert.sql  list.sql
crates/ao-fleet-store/sql/daemon_override/: delete_by_team.sql  get_by_team.sql  list.sql  upsert.sql
crates/ao-fleet-store/sql/host/: delete.sql  get.sql  insert.sql  list.sql  update.sql
crates/ao-fleet-store/sql/knowledge_document/: get.sql  insert.sql  list.sql
crates/ao-fleet-store/sql/knowledge_fact/: get.sql  insert.sql  list.sql
crates/ao-fleet-store/sql/knowledge_source/: get.sql  list.sql  upsert.sql
crates/ao-fleet-store/sql/migrations/: 002_create_schema.sql  003_create_audit_events.sql  (+5 more)
crates/ao-fleet-store/src/: fleet_store.rs  lib.rs
(+209 files in other folders)
