[workspace]
members = [
  "crates/ao-fleet-ao",
  "crates/ao-fleet-cli",
  "crates/ao-fleet-core",
  "crates/ao-fleet-knowledge",
  "crates/ao-fleet-mcp",
  "crates/ao-fleet-scheduler",
  "crates/ao-fleet-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
