[package]
name = "ao-fleet-ao"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
tempfile = "3.23.0"
