[package]
name = "ao-fleet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ao-fleet-ao = { path = "../ao-fleet-ao" }
ao-fleet-core = { path = "../ao-fleet-core" }
ao-fleet-knowledge = { path = "../ao-fleet-knowledge" }
ao-fleet-mcp = { path = "../ao-fleet-mcp" }
ao-fleet-scheduler = { path = "../ao-fleet-scheduler" }
ao-fleet-store = { path = "../ao-fleet-store" }
