[package]
name = "ao-fleet-knowledge"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
ao-fleet-core = { path = "../ao-fleet-core" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
