[package]
name = "ao-fleet-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ao-fleet-core = { path = "../ao-fleet-core" }
ao-fleet-scheduler = { path = "../ao-fleet-scheduler" }
ao-fleet-store = { path = "../ao-fleet-store" }
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
