[package]
name = "ao-fleet-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ao-fleet-core = { path = "../ao-fleet-core" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
